версия apache http client повышена до 5. тесты переписаны на java. методы коннектора переписаны на рекомендуемую для нового клиента сигнатуру